# xlm-paymaster

./: .cargo-watch.toml  .env.docker  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMONSTRATION.md  DEPLOYMENT_GUIDE.md  FLUTTER_SDK_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  docker-compose.db-scale.yml  docker-compose.scale.yml  docker-compose.testnet.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.toml  turbo.json
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: awesome-lint.yml  dependency-audit.yml  deploy-classic-payment.yml  deploy-docs.yml  docs.yml  lint-ts.yml  nx-ci.yml  paymaster-server-tests.yml  rust-ci.yml  rust-wasm.yml  workspace-ci.yml
admin-dashboard/: .gitignore  README.md  auth.ts  env.example  middleware.ts  package-lock.json  package.json  playwright.config.ts  referral.test.mjs  tailwind.config.ts  typedoc.json
chaos/: README.md
client/: REACT_NATIVE.md  README.md  TELEMETRY.md  WALLET_CONNECT.md  WEB_WORKER_README.md  demo-queue.html  demo.html  package-lock.json  package.json  playground.html  tsconfig.build.json  tsconfig.json  tsup.config.ts  typedoc.json
docs/: README.md  alert-system-cooldown-deduplication.md  automated-market-maker-wrapper.md  awesome-paymaster.md  billing.md  cli-transaction-simulator.md  compliance-hooks.md  configurable-max-operations-limit.md  congestion-fee-simulator.md  contract-cache.md  cross-browser-e2e-admin-dashboard.md  database-encryption.md  enterprise-directory-sync-sso.md  envoy-api-gateway-rate-limiting.md  error-wiki.md  feature-expansion.md  flutter.md  graceful-shutdown-workers.md  granular-notification-settings.md  grpc-mtls.md  help-center.md  horizontal-scaling.md  i18n.md  identity-registry-did.md  index.html  load-testing.md  localized-fee-estimation.md  multi-region-architecture.md  multi-tenant-isolation.md  multi-tenant-setup.md  network_latency_simulation.md  notification-engine.md  parity-compliance-report.md  paymaster-vs-manual.md  rate-limit-boundary-tests.md  rate-limiting.md  react-native-starter-kit.md  read-write-replica.md  real-time-transaction-feed.md  sandbox-data-cleanup.md  (+11 more)
fluid-cli/: Cargo.toml
fluid-server/: Cargo.toml  audit.toml
fluid-server/fuzz/: Cargo.toml
frontend/: package-lock.json  package.json
infra/: nginx.conf
k6/: fee_bump_stress.js  load_testing_report.md
paymaster-cli/: Cargo.toml
paymaster-core/: Cargo.toml  README.md
paymaster-core/examples/: basic_signing.rs  custom_signer.rs  transaction_builder.rs
paymaster-core/src/: error.rs  lib.rs  signer.rs  transaction_builder.rs  types.rs
paymaster-core/tests/: integration_test.rs
paymaster-go/: client.go  client_test.go
paymaster-py/: pyproject.toml
paymaster-py/examples/: example_fee_bump.py  mock_paymaster_server.py
paymaster-py/paymaster_py/: __init__.py  client.py  exceptions.py  models.py
paymaster-py/tests/: test_client.py
paymaster-server/: Cargo.toml  Dockerfile  Dockerfile.rust  VAULT_INTEGRATION.md  project.json
pgbouncer/: pgbouncer.ini  userlist.txt
scripts/: generate-monthly-report.mjs  setup.sh
server/: .env.example  Cargo.toml  README.md  dev.db  package-lock.json  package.json  typedoc.json
(+2266 files in other folders)
