[package]
name = "xlm-paymaster-core"
version.workspace = true
edition.workspace = true
description = "Core signing and transaction logic for xlm-paymaster"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/paymaster-core"
keywords = ["stellar", "soroban", "signing", "transaction", "passkey"]
categories = ["cryptography", "api-bindings"]
readme = "README.md"

[lib]
name = "paymaster_core"

[dependencies]
ed25519-dalek.workspace = true
stellar-strkey.workspace = true
tokio.workspace = true
zeroize.workspace = true
thiserror.workspace = true

# Additional dependencies for transaction building
stellar-xdr = { version = "21.2.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
serde = ["dep:serde"]
