[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paymaster-py"
version = "0.1.0"
description = "Python client for the Paymaster fee-sponsorship API — sponsor Stellar transaction fees from any Python app or AI agent."
authors = [{ name = "Stellar-Paymaster", email = "dev@paymaster.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["stellar", "soroban", "fee-bump", "gasless", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
stellar = ["stellar-sdk>=10.0.0"]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.3",
    "requests-mock>=1.11",
    "stellar-sdk>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/Stellar-Paymaster/paymaster"
Documentation = "https://docs.paymaster.dev/sdk/python"
Repository = "https://github.com/Stellar-Paymaster/paymaster"
"Bug Tracker" = "https://github.com/Stellar-Paymaster/paymaster/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["paymaster_py*"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
